Investigator data page spinner

--- a/app/views/data/_investigators.html.erb
+++ b/app/views/data/_investigators.html.erb
@@ -1,3 +1,9 @@
 <div class="l-content">
   <div id="entityData" class="wrapper"></div>
+
+  <div class="c-spinner -start">
+   <div class="spinner-box">
+     <div class="icon"></div>
+   </div>
+ </div>
 </div>
