Country data spinner

--- a/app/views/data/_countries.html.erb
+++ b/app/views/data/_countries.html.erb
@@ -1,9 +1,15 @@
-<div class="wrapper">
+<div class="l-content wrapper">
   <div id="countryData" class="c-data"></div>
+
+  <div class="c-spinner -start">
+   <div class="spinner-box">
+     <div class="icon"></div>
+   </div>
+ </div>
 </div>
 
-<div class="wrapper">
-  <div class="c-data -border">
+<div class="l-content wrapper">
+  <div class="c-data">
     <div class="row collapse">
       <div class="column small-12 medium-8 large-8">
         <div id="widgets-graph" class="c-graph"> </div>
@@ -16,4 +22,10 @@
       </div>
     </div>
   </div>
+
+  <div class="c-spinner -start">
+   <div class="spinner-box">
+     <div class="icon"></div>
+   </div>
+ </div>
 </div>
