--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -9,6 +9,10 @@
     box-shadow: none;
   }
 
+  &.-br-bottom {
+    border-bottom: 1px solid $border-color-1;
+  }
+
   &.-pad-bigger {
     padding: $box-space + 15px;
   }
