--- a/app/views/investigators/_net_list.html.erb
+++ b/app/views/investigators/_net_list.html.erb
@@ -2,7 +2,7 @@
   <div id="investigatorsActionsView" class="row collapse -no-mrg">
     <% items.each do |e| %>
       <div class="column small-12 medium-6">
-        <div class="c-card -pad-bigger -no-shadow -person">
+        <div class="c-card -pad-bigger -no-shadow -br-bottom -person">
           <div class="c-avatar -medium -ph -mg-bt"></div>
           <h2><a href="/investigators/<%= e.id %>"><%= e.name %></a></h2>
           <% if e.user %>
