--- a/app/views/users/_network.html.erb
+++ b/app/views/users/_network.html.erb
@@ -21,9 +21,9 @@
     </article>
 
     <article>
-      <div class="l-content -no-br -br-bottom wrapper">
+      <div class="l-content -no-br <%= @followEvents.any? && '-br-bottom' %> wrapper">
         <h2><%= t 'events' %></h2>
-        <% if @followEvents.size <= 0 %>
+        <% if !@followEvents.any? %>
           <p>No events</p>
         <% end %>
       </div>
@@ -53,7 +53,7 @@
       </div>
       <div class="wrapper">
         <ul class="c-list -mg-bottom">
-          <% if @followCountries.size > 0 %>
+          <% if @followCountries.any? %>
             <% @followCountries.each do |c| %>
               <li class="list-item"><%= link_to c.country_name, country_path(iso: c.country_iso_3), class: '-uppercase' %></li>
             <% end %>
@@ -68,7 +68,7 @@
       </div>
       <div class="wrapper">
         <ul class="c-list -mg-bottom">
-          <% if @followCancerTypes.size > 0 %>
+          <% if @followCancerTypes.any? %>
             <% @followCancerTypes.each do |ct| %>
               <li class="list-item -uppercase"><%= link_to ct.name, cancer_path(slug: ct.slug), class: '-uppercase' %></li>
             <% end %>
