--- a/app/views/events/_list.html.erb
+++ b/app/views/events/_list.html.erb
@@ -16,7 +16,7 @@
           <h2><%= link_to e.title, event_path(e.slug ? e.slug : e.id) %></h2>
           <p><%= truncate(e.description.html_safe, :length => 300) %></p>
 
-          <% if controller_name === 'users' %>
+          <% if controller_name === 'users' && is_owner?(@user, current_user) %>
             <a href="/network/<%= current_user.id %>/events/<%= e.id %>/edit" class="c-btn -primary">
               Edit
             </a>
