--- a/app/views/investigators/_net_list.html.erb
+++ b/app/views/investigators/_net_list.html.erb
@@ -5,7 +5,7 @@
         <div class="c-card -pad-bigger -no-shadow -br-bottom -person">
           <div class="c-avatar -medium -ph -mg-bt"></div>
           <h2><a href="/investigators/<%= e.id %>"><%= e.name %></a></h2>
-          <% if e.user %>
+          <% if e.user.present? && is_owner?(@user, current_user) %>
             <button class="c-btn -icon -secondary js-btn-toggle-message" data-user="<%= e.user.id %>" type="button" name="button">
               <svg class="c-icon -normal -inverse"><use xlink:href="#icon-message"></use></svg>
               <svg class="c-icon -normal -inverse -hidden"><use xlink:href="#icon-close"></use></svg>
