--- a/app/views/posts/_list.html.erb
+++ b/app/views/posts/_list.html.erb
@@ -7,7 +7,7 @@
           <div class="wrapper">
             <h3 class="-underlined"><%= link_to p.title, p %></h3>
             <p><%= p.body && p.body.truncate(300).html_safe %></p>
-            <% if controller_name === 'users' %>
+            <% if controller_name === 'users' && is_owner?(@user, current_user) %>
               <a href="/posts/<%= p.id %>/edit" class="c-btn -primary">
                 Edit
               </a>
