--- a/app/views/projects/_list.html.erb
+++ b/app/views/projects/_list.html.erb
@@ -24,9 +24,11 @@
 
           <% if controller_name === 'users' %>
             <% if p.project_users.first.is_approved %>
-              <a href="/network/<%= current_user.id %>/projects/<%= p.id %>/edit" class="c-btn -primary">
-                Edit
-              </a>
+              <% if is_owner?(@user, current_user) %>
+                <a href="/network/<%= current_user.id %>/projects/<%= p.id %>/edit" class="c-btn -primary">
+                  Edit
+                </a>
+              <% end %>
             <% else %>
               <span class="pending">
                 <svg class="c-icon icon-pending -medium"><use xlink:href="#icon-pending"></use></svg>
