Show specialities on each project

--- a/app/views/projects/_net_list.html.erb
+++ b/app/views/projects/_net_list.html.erb
@@ -18,6 +18,14 @@
               </span>
             <% end %>
           </p>
+
+          <p>
+            <% p.specialities.each do |sp| %>
+              <span class="c-tag -mg -darker">
+                <%= sp.name %>
+              </span>
+            <% end %>
+          </p>
         </div>
       </div>
     <% end %>
