--- a/app/views/projects/_list.html.erb
+++ b/app/views/projects/_list.html.erb
@@ -22,6 +22,14 @@
             <% end %>
           </p>
 
+          <p>
+            <% p.specialities.each do |sp| %>
+              <span class="c-tag -mg -darker">
+                <%= sp.name %>
+              </span>
+            <% end %>
+          </p>
+
           <% if controller_name === 'users' %>
             <% if p.project_users.first.is_approved %>
               <a href="/network/<%= current_user.id %>/projects/<%= p.id %>/edit" class="c-btn -primary">
