--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -29,7 +29,11 @@
               <% #end %>
 
               <h3>
-                <%= @project.project_lead && @project.project_lead.name %>
+                <% if @project.project_lead.present? && @project.project_lead.name != '' %>
+                  <%= @project.project_lead.name %>
+                <% else %>
+                  No project lead
+                <% end %>
               </h3>
             </div>
 
@@ -39,7 +43,7 @@
                   <use xlink:href="#icon-collaborators"></use>
                 </svg>
               </div>
-              <h3><%= @project.investigators.count != 0 ? @project.investigators.count - 1 : 0 %> <%= t 'collaborator'%>(s)</h3>
+              <h3><%= @project.investigators.any? ? @project.investigators.count - 1 : 0 %> <%= t 'collaborator'%>(s)</h3>
             </div>
 
             <% if @project.funding_sources && @project.funding_sources.size > 0 %>
