--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -22,11 +22,11 @@
           <div class="c-summary-info row -collapse">
 
             <div class="column small-12 large-4 align-middle">
-              <% #if @project.project_lead && @project.project_lead.img %>
-                <!-- <img src="<%# @project.project_lead.img %>" class="c-avatar -small" /> -->
-              <% #else %>
-                <div class="c-avatar -small -ph"></div>
-              <% #end %>
+              <div class="c-avatar -small -ph">
+                <% if @project.project_lead.present? && @project.project_lead.user.present? %>
+                  <%= image_tag(@project.project_lead.user.avatar_url(:thumb)) %>
+                <% end %>
+              </div>
 
               <h3>
                 <% if @project.project_lead.present? && @project.project_lead.name != '' %>
