--- a/app/assets/stylesheets/components/_avatar.scss
+++ b/app/assets/stylesheets/components/_avatar.scss
@@ -8,6 +8,8 @@
   border-radius: 50%;
   background-color: $primary-color;
   color: $inverse-font-color;
+  background-position: center;
+  background-size: cover;
 
   &.-ph {
     background-image: asset-url('placeholder.png');
