--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -11,7 +11,11 @@
       <div class="row">
         <div class="column small-12 medium-8 align-middle">
           <div class="investigator">
-            <div class="c-avatar -ph -small"></div>
+            <div class="c-avatar -ph -small"
+                 style="<% if investigator.present? %>
+                        background-image: url(<%= investigator.avatar_url(:thumb) %>)
+                      <% end %>">
+            </div>
             <p><%= investigator.present? && investigator.try(:name) %></p>
           </div>
         </div>
