--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -14,8 +14,10 @@
   <div class="form-row row">
     <div class="column small-12 medium-5 medium-offset-1">
       <h4 class="c-title">Profile picture url:</h4>
-      <div class="c-avatar">
-        <%= image_tag(@user.avatar_url) if @user.avatar? %>
+      <div class="c-avatar"
+           style="<% if @user.avatar? %>
+                    background-image: url(<%= @user.avatar_url(:thumb) %>)
+                  <% end %>">
       </div>
       <%= f.file_field :avatar, label: false %>
     </div>
