--- a/app/views/investigators/_net_list.html.erb
+++ b/app/views/investigators/_net_list.html.erb
@@ -1,9 +1,13 @@
-<% if items && items.size() > 0 %>
+<% if items.any? %>
   <div id="investigatorsActionsView" class="row collapse -no-mrg">
     <% items.each do |e| %>
       <div class="column small-12 medium-6">
         <div class="c-card -pad-bigger -no-shadow -br-bottom -person">
-          <div class="c-avatar -medium -ph -mg-bt"></div>
+          <div class="c-avatar -medium -ph -mg-bt"
+               style="<% if e.user.present? %>
+                            background-image: url(<%= e.user.avatar_url(:thumb) %>)
+                          <% end %>">
+          </div>
 
           <h2><%= link_to e.name, investigator_path(e.slug_or_id) %></h2>
           <% if e.user.present? && is_owner?(@user, current_user) %>
