--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -14,8 +14,8 @@
     <div class="wrapper">
       <div class="row collapse">
         <div class="column small-8">
-          <div class="c-avatar -big -mg-bt">
-            <%= image_tag(user.avatar_url) %>
+          <div class="c-avatar -big -mg-bt"
+               style="background-image: url(<%= user.avatar_url(:thumb) %>)">
           </div>
         </div>
       </div>
