User search spinner

--- a/app/views/users/_network.html.erb
+++ b/app/views/users/_network.html.erb
@@ -44,6 +44,12 @@
             <use xlink:href="#icon-close"></use>
           </svg>
         </div>
+
+        <div class="c-spinner -start">
+          <div class="spinner-box">
+            <div class="icon"></div>
+          </div>
+        </div>
       </div>
 
       <div id="search-list" class="l-content -no-br -no-top-padd wrapper -hidden"></div>
