--- a/app/assets/stylesheets/layouts/_grid.scss
+++ b/app/assets/stylesheets/layouts/_grid.scss
@@ -8,10 +8,14 @@
 }
 
 .l-grid {
-  border-top:  1px solid $border-color-1;
+  border-top: 1px solid $border-color-1;
 
   .row {
     .-no-mrg { margin: 0; }
+
+    .-br-bottom {
+      border-bottom: 1px solid $border-color-1;
+    }
   }
 
   .column {
