Render country map widget

--- a/app/assets/javascripts/templates/graph.hbs
+++ b/app/assets/javascripts/templates/graph.hbs
@@ -12,4 +12,4 @@
     </ul>
   </div> -->
 </div>
-<div id="graph-box" class="c-graph"></div>
+<div id="graph-box" class="c-graph{{#if type}} -map{{/if}}"></div>
