--- a/app/assets/javascripts/templates/infowindow.hbs
+++ b/app/assets/javascripts/templates/infowindow.hbs
@@ -48,5 +48,8 @@
   {{#if events}}
     <h3>{{events}} events</h3>
   {{/if}}
+  {{#if widget}}
+    <p>{{city}}, {{province_state}}</p>
+  {{/if}}
 
 </div>
