--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -3,7 +3,7 @@
 
 <section>
   <div class="wrapper">
-    <div class="c-claim -primary">
+    <div class="c-claim -primary -smaller">
       <h1>Join the network</h1>
       <ul class="claim-list">
         <li>
