Center logo & Provisional minor responsive styles

--- a/app/assets/stylesheets/components/_nav.scss
+++ b/app/assets/stylesheets/components/_nav.scss
@@ -1,3 +1,12 @@
+//TODO: waiting for responsive
+.c-nav {
+  flex-wrap: wrap;
+
+  &.-social {
+    flex-wrap: nowrap;
+  }
+}
+
 .c-nav,
 .c-nav > ul {
   @extend %clearlist;
