--- a/app/assets/stylesheets/components/_dropdown.scss
+++ b/app/assets/stylesheets/components/_dropdown.scss
@@ -69,4 +69,15 @@ $dropdown-width: 182px;
       }
     }
   }
+
+  //TODO: hide it until responsive implemented
+  &.-sortby {
+    > span {
+      display: none;
+
+      @media screen and (min-width: 990px) {
+        display: inherit;
+      }
+    }
+  }
 }
