--- a/app/views/events/_list.html.erb
+++ b/app/views/events/_list.html.erb
@@ -4,14 +4,14 @@
     <% items.each do |e| %>
       <div class="column small-12 medium-4">
         <div class="c-card -events">
-          <% if e.country? %>
+          <% if e.country.present? %>
             <h3 class="-underlined -alternative">
               <% country = Country.find_by( country_name: e.country ) %>
               <!-- TODO: In case country dosen't exist -->
-              <% if country %>
-                <%= link_to e.city + ', ' + e.country, country_path(country.country_iso_3) %>
+              <% if country.present? && country.country_iso_3.present? %>
+                <%= link_to prop_or_blank(e.city) + ', ' + prop_or_blank(e.country), country_path(country.country_iso_3) %>
               <% else %>
-                <%= e.country %>
+                <%= prop_or_blank(e.city) + ', ' + prop_or_blank(e.country) %>
               <% end %>
             </h3>
           <% end %>
