--- a/app/views/map/_counters.html.erb
+++ b/app/views/map/_counters.html.erb
@@ -6,36 +6,36 @@
 
         <% gridSize = params.key?('countries') ? 3 : 4 %>
         <% if params.key?('countries') %>
-          <div class="column small-#{gridSize}">
+          <div class="column small-12 medium-<%= gridSize %>">
             <h3>Investigations</h3>
             <span class="amount"><%= @investigations %></span>
           </div>
         <% end %>
-        <div class="column small-#{gridSize}">
+        <div class="column small-12 medium-<%= gridSize %>">
           <h3>
             <%= t @current_type %>
           </h3>
           <span class="amount"><%= @items_total %></span>
         </div>
-        <div class="column small-#{gridSize}">
+        <div class="column small-12 medium-<%= gridSize %>">
           <h3>Project leads</h3>
           <span class="amount"><%= @project_leads %></span>
         </div>
-        <div class="column small-#{gridSize}">
+        <div class="column small-12 medium-<%= gridSize %>">
           <h3>Collaborators</h3>
           <span class="amount"><%= @collaborators %></span>
         </div>
 
       <% elsif @current_type == 'events' %>
-        <div class="column small-4">
+        <div class="column small-12 medium-4">
           <h3>Total</h3>
           <span class="amount"><%= @items_total %></span>
         </div>
-        <div class="column small-4">
+        <div class="column small-12 medium-4">
           <h3>Public events</h3>
           <span class="amount"><%= @items_public_total %></span>
         </div>
-        <div class="column small-4">
+        <div class="column small-12 medium-4">
           <h3>Private events</h3>
           <span class="amount"><%= @items_private_total %></span>
         </div>
