--- a/app/assets/stylesheets/layouts/_app.scss
+++ b/app/assets/stylesheets/layouts/_app.scss
@@ -54,8 +54,19 @@
 
   .l-app-navbar {
     position: relative;
-    margin-top: -52px;
     background-color: rgba($secondary-color, .7);
+
+    @media #{$mq-small} {
+      margin-top: -52px;
+    }
+
+    .c-toolbar {
+      display: none;
+
+      @media #{$mq-small} {
+        display: flex;
+      }
+    }
   }
 
   .l-app-title {
