--- a/app/views/map/index.html.erb
+++ b/app/views/map/index.html.erb
@@ -24,7 +24,7 @@
   <div class="l-app-navbar">
     <div class="wrapper">
       <div class="row collapse">
-        <div class="column small-6">
+        <div class="column small-12 medium-6">
           <ul class="c-tabnav" id="dataTabNav">
              <% @filters.each do |filter| %>
               <li class="tabnav-item">
