--- a/app/assets/javascripts/templates/toolbar.hbs
+++ b/app/assets/javascripts/templates/toolbar.hbs
@@ -1,22 +1,28 @@
-<ul class="c-toolbar">
-  <li id="download"class="toolbar-item -sortby">
-    <a href="#" class="c-btn -action" target="_blank" download>
-      <svg class="c-icon -small -inverse">
-        <use xlink:href="#icon-download"></use>
-      </svg>
-      Download
-    </a>
-  </li>
+  <ul class="c-toolbar">
+    <li id="download" class="toolbar-item -sortby">
+      <a href="#" class="c-btn -action" target="_blank" download>
+        <svg class="c-icon -small -inverse">
+          <use xlink:href="#icon-download"></use>
+        </svg>
+        Download
+      </a>
+    </li>
 
-  <li id="sortby" class="toolbar-item -sortby"></li>
+    <li id="sortby" class="toolbar-item -sortby"></li>
 
-  <li class="toolbar-item -highlighted">
-    <button class="c-btn -action js-toolbar-action" data-action="filter">
-      <svg class="c-icon -small -inverse">
-        <use xlink:href="#icon-filter"></use>
-      </svg>
-      Filter
-      <span class="notification-bubble js-notification-bubble"></span>
-    </button>
-  </li>
-</ul>
+    <li class="toolbar-item -highlighted">
+      <button class="c-btn -action js-toolbar-action" data-action="filter">
+        <svg class="c-icon -small -inverse">
+          <use xlink:href="#icon-filter"></use>
+        </svg>
+        Filter
+        <span class="notification-bubble js-notification-bubble"></span>
+      </button>
+    </li>
+
+    <li class="toolbar-item options js-toolbar-action" data-action="options">
+      <svg class="c-icon icon-plus -inverse"><use xlink:href="#icon-plus"></use></svg>
+      <svg class="c-icon icon-close -hidden -inverse"><use xlink:href="#icon-close"></use></svg>
+    </li>
+  </ul>
+
