--- a/app/assets/javascripts/templates/actionbar.hbs
+++ b/app/assets/javascripts/templates/actionbar.hbs
@@ -10,7 +10,7 @@
     </li>
   {{/if}}
 
-  <li class="actionbar-item">
+  <li class="actionbar-item layers">
     <button class="c-btn -action -thin js-actionbar-action" data-action="layers">
       <svg class="c-icon -small -inverse">
         <use xlink:href="#icon-layers"></use>
