--- a/app/assets/stylesheets/components/_dropdown.scss
+++ b/app/assets/stylesheets/components/_dropdown.scss
@@ -11,6 +11,7 @@ $dropdown-width: 182px;
   > span {
     display: inline-block;
     line-height: 52px;
+    white-space: nowrap;
   }
 
   .dropdown-value {
@@ -66,17 +67,6 @@ $dropdown-width: 182px;
 
       &.-active {
         opacity: .5;
-      }
-    }
-  }
-
-  //TODO: hide it until responsive implemented
-  &.-sortby {
-    > span {
-      display: none;
-
-      @media screen and (min-width: 990px) {
-        display: inherit;
       }
     }
   }
