--- a/app/views/map/index.html.erb
+++ b/app/views/map/index.html.erb
@@ -8,7 +8,7 @@
           <div class="c-breadcrumbs" id="breadcrumbs"></div>
         </div>
         <div class="column small-6">
-          <div id="actionbar"></div>
+          <div id="actionbar" class="actionbar"></div>
         </div>
       </div>
     </div>
@@ -38,8 +38,23 @@
             <% end %>
           </ul>
         </div>
-        <div class="column small-6">
-          <div id="toolbar"></div>
+        <div class="column small-12 medium-6">
+          <div id="toolbar" class="c-map-options">
+            <div class="hidden-options actionbar">
+              <ul>
+                <li id="download" class="toolbar-item -sortby">
+                  <a href="#" class="c-btn -action" target="_blank" download>
+                    <svg class="c-icon -small -inverse">
+                      <use xlink:href="#icon-download"></use>
+                    </svg>
+                    Download
+                  </a>
+                </li>
+              </ul>
+
+            </div>
+
+          </div>
         </div>
       </div>
     </div>
