--- a/app/assets/javascripts/templates/breadcrumbs.hbs
+++ b/app/assets/javascripts/templates/breadcrumbs.hbs
@@ -7,6 +7,7 @@
         <a href="{{link}}"
           class="js-breadcrumb"
           name={{name}}
+          title="{{string}}"
           {{#if value}}data-value="{{value}}"{{/if}}
         >
           {{!-- <span class="globe-icon"><svg><use xlink:href="#icon-globe"</svg></span> --}}
