--- a/app/assets/stylesheets/components/_map_options.scss
+++ b/app/assets/stylesheets/components/_map_options.scss
@@ -25,6 +25,11 @@
 
     .c-btn {
       padding: $inline-space 10px;
+
+      @media #{$mq-small} {
+        padding: $inline-space $base-space;
+      }
+
     }
   }
 
