--- a/app/views/map/index.html.erb
+++ b/app/views/map/index.html.erb
@@ -4,10 +4,10 @@
   <div class="l-app-upperbar">
     <div class="wrapper">
       <div class="row collapse">
-        <div class="column small-6">
+        <div class="column small-12 medium-6">
           <div class="c-breadcrumbs" id="breadcrumbs"></div>
         </div>
-        <div class="column small-6">
+        <div class="column medium-6">
           <div id="actionbar" class="actionbar"></div>
         </div>
       </div>
@@ -39,7 +39,8 @@
           </ul>
         </div>
         <div class="column small-12 medium-6">
-          <div id="toolbar" class="c-map-options">
+          <!-- <div class="toolbar"></div> -->
+          <div id="toolbar" class="toolbar c-map-options">
             <div class="hidden-options actionbar">
               <ul>
                 <li id="download" class="toolbar-item -sortby">
