--- a/app/assets/stylesheets/components/_breadcrumbs.scss
+++ b/app/assets/stylesheets/components/_breadcrumbs.scss
@@ -4,6 +4,7 @@
     margin: 0;
     padding: 0;
     list-style: none;
+    overflow: auto;
 
     > li a {
       display: block;
@@ -14,6 +15,7 @@
       font-size: $small-font-size;
       font-weight: bold;
       text-transform: uppercase;
+      white-space: nowrap;
 
       background-color: $app-bg-color;
 
