--- a/app/views/map/index.html.erb
+++ b/app/views/map/index.html.erb
@@ -1,17 +1,9 @@
 <% title "Map" %>
 
 <section class="l-app -main -full">
-  <div class="l-app-upperbar">
-    <div class="wrapper">
-      <div class="row collapse">
-        <div class="column small-12 medium-6">
-          <div class="c-breadcrumbs" id="breadcrumbs"></div>
-        </div>
-        <div class="column medium-6">
-          <div id="actionbar" class="actionbar"></div>
-        </div>
-      </div>
-    </div>
+  <div class="l-app-upperbar wrapper">
+    <div class="c-breadcrumbs" id="breadcrumbs"></div>
+    <div id="actionbar" class="actionbar"></div>
   </div>
 
   <div class="l-app-map">
@@ -39,7 +31,6 @@
           </ul>
         </div>
         <div class="column small-12 medium-6">
-          <!-- <div class="toolbar"></div> -->
           <div id="toolbar" class="toolbar c-map-options">
             <div class="hidden-options actionbar">
               <ul>
