--- a/app/assets/javascripts/templates/toolbar.hbs
+++ b/app/assets/javascripts/templates/toolbar.hbs
@@ -10,7 +10,7 @@
 
     <li id="sortby" class="toolbar-item -sortby"></li>
 
-    <li class="toolbar-item -highlighted">
+    <li class="toolbar-item -highlighted filter-btn">
       <button class="c-btn -action js-toolbar-action" data-action="filter">
         <svg class="c-icon -small -inverse">
           <use xlink:href="#icon-filter"></use>
