--- a/app/assets/stylesheets/components/_breadcrumbs.scss
+++ b/app/assets/stylesheets/components/_breadcrumbs.scss
@@ -1,10 +1,13 @@
 .c-breadcrumbs {
+  width: 100%;
+
   > ul {
     display: flex;
     margin: 0;
     padding: 0;
     list-style: none;
     overflow: auto;
+    padding-right: 15px;
 
     > li a {
       display: block;
