--- a/app/assets/stylesheets/layouts/_app.scss
+++ b/app/assets/stylesheets/layouts/_app.scss
@@ -39,6 +39,8 @@
     background-color: rgba($primary-color, .7);
     z-index: 1;
 
+    display: flex;
+    justify-content: space-between;
 
     #layers {
       position: relative;
@@ -47,7 +49,7 @@
     .c-actionbar {
       display: none;
 
-      @media #{$mq-small} {
+      @media #{$mq-medium-map} {
         display: flex;
       }
     }
@@ -64,7 +66,7 @@
     position: relative;
     background-color: rgba($secondary-color, .7);
 
-    @media #{$mq-small} {
+    @media #{$mq-medium-map} {
       margin-top: -52px;
     }
   }
