--- a/app/views/about/index.html.erb
+++ b/app/views/about/index.html.erb
@@ -70,7 +70,7 @@
         <p>For more suggestions on how to get started using the GCPM, see the <a href="#">FAQ</a>.</p>
         <p>If you would like to contribute to the Global Cancer Project Map, or provide feedback to the management team, we can be reached at <a href="mailto:data@globalonc.org">data@globalonc.org</a>.</p>
         <h2>Acknowledgments</h2>
-        <p>The GCPM was made possible through an initial alliance between the <a href="https://www.cancer.gov/about-nci/organization/cgh">U.S. National Cancer Institute Center for Global Health and Global Oncology, Inc.</a> The American Society for Clinical Oncology and Union for International Cancer Control also contributed scientific and programmatic input. The website was developed by the creative digital agency vizzuality.</p>
+        <p>The GCPM was made possible through an initial alliance between the <a href="https://www.cancer.gov/about-nci/organization/cgh">U.S. National Cancer Institute Center for Global Health and Global Oncology, Inc.</a> The American Society for Clinical Oncology and Union for International Cancer Control also contributed scientific and programmatic input. The website was developed by the creative digital agency <a href="http://www.vizzuality.com/" target="_blank">Vizzuality</a>.</p>
       </div>
     </div>
   </div>
