--- a/app/views/shared/_user_actions.html.erb
+++ b/app/views/shared/_user_actions.html.erb
@@ -31,7 +31,7 @@
                   <%= f.hidden_field :receiver, value: @investigator.user.id %>
                 </div>
                 <div class="form-row">
-                  <%= f.submit 'Enviar', class: 'c-btn -secondary' %>
+                  <%= f.submit 'Send', class: 'c-btn -secondary' %>
                 </div>
               <% end %>
             </div>
