--- a/app/views/users/_net_list.html.erb
+++ b/app/views/users/_net_list.html.erb
@@ -28,7 +28,7 @@
                   <%= f.hidden_field :receiver, value: e.id %>
                 </div>
                 <div class="form-row">
-                  <%= f.submit 'Enviar', class: 'c-btn -secondary' %>
+                  <%= f.submit 'Send', class: 'c-btn -secondary' %>
                 </div>
               <% end %>
             </div>
