--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -45,7 +45,9 @@
 
 <section class="l-app -main -home -full">
   <div class="l-app-map">
-    <div id="map" class="c-map"></div>
+    <%= link_to map_path do %>
+      <div id="map" class="c-map"></div>
+    <% end %>
   </div>
   <div class="l-app-claim">
     <div class="c-claim">
