--- a/app/views/investigators/_net_list.html.erb
+++ b/app/views/investigators/_net_list.html.erb
@@ -10,6 +10,11 @@
           </div>
 
           <h2><%= link_to e.name, investigator_path(e.slug_or_id) %></h2>
+          <% e.organizations.each do |o|%>
+            <h3><%= link_to o.name, organization_path(o.slug) %></h3>
+            <h3><%= o.addresses.map{|a| [a.city, a.country_name]}.uniq.join(', ') %></h3>
+          <% end %>
+          
           <% if e.user.present? && is_owner?(@user, current_user) %>
             <button class="c-btn -icon -secondary js-btn-toggle-message" data-user="<%= e.user.id %>-i" type="button" name="button">
               <svg class="c-icon -normal -inverse"><use xlink:href="#icon-message"></use></svg>
