Responsive map layers

--- a/app/assets/stylesheets/_settings.scss
+++ b/app/assets/stylesheets/_settings.scss
@@ -50,6 +50,7 @@ $box-shadow-2: 0 7px 15px 0 rgba(0, 0, 0, 0.2);
 
 $base-space: 23px;
 $box-space: 60px;
+$small-box-space: 15px;
 $inline-space: 18px;
 
 $button-x-padding: 23px;
